--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,24 +87,22 @@ jobs:
         run: sudo apt update
       - name: Install SDL2, his image and ttf modules, libcurl, Python3 setuptools and lintian
         run: sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libcurl4-openssl-dev python3-setuptools lintian
-      - name: Install Meson using pip3
-        run: sudo pip3 install meson==0.57.1
+      - name: Install Meson and Ninja using pip3
+        run: sudo pip3 install meson==0.57.1 ninja
       - name: Install Mozilla's web-ext with npm
         run: sudo npm install -g web-ext
+      - name: Setup project
+        run: meson build --prefix=/usr -Dstrip=true -Dcpp_link_args='-z now'
+        env:
+          CC:  clang
+          CXX: clang++
       - name: Build project
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: build
-          setup-options: --prefix=/usr -Dstrip=true
-          meson-version: 0.57.1
+        run: ninja -C build
         env:
           CC:  clang
           CXX: clang++
       - name: Test project
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: test
-          meson-version: 0.57.1
+        run: ninja -C build test
       - name: Generate Debian package
         run: ninja -C build "packaging/$(grep -oEm 1 "arcollect_[0-9\.]+-1_$(echo -n "$(dpkg-architecture -q DEB_HOST_ARCH)").deb" build/build.ninja)"
         shell: bash
@@ -128,19 +126,16 @@ jobs:
         run: sudo apt update
       - name: Install SDL2, his image and ttf modules, libcurl, Python3 setuptools and lintian
         run: sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libcurl4-openssl-dev python3-setuptools lintian
+      - name: Install Meson and Ninja using pip3
+        run: sudo pip3 install meson==0.57.1 ninja
       - name: Install Mozilla's web-ext with npm
         run: sudo npm install -g web-ext
+      - name: Setup project
+        run: meson build --prefix=/usr -Dstrip=true -Dcpp_link_args='-z now'
       - name: Build project
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: build
-          setup-options: --prefix=/usr -Dstrip=true
-          meson-version: 0.57.1
+        run: ninja -C build
       - name: Test project
-        uses: BSFishy/meson-build@v1.0.3
-        with:
-          action: test
-          meson-version: 0.57.1
+        run: ninja -C build test
       - name: Generate Debian package
         run: ninja -C build "packaging/$(grep -oEm 1 "arcollect_[0-9\.]+-1_$(echo -n "$(dpkg-architecture -q DEB_HOST_ARCH)").deb" build/build.ninja)"
         shell: bash
