Added wraps for libpng and libtiff4

--- a/meson.build
+++ b/meson.build
@@ -65,7 +65,10 @@ if enable_native_progs
 		dep_curl = subproj_curl.dependency('libcurl')
 	endif
 	
+	# For SDL2_image
 	dep_libjpeg  = dependency('libjpeg', required: true)
+	dep_libpng  = dependency('libpng', required: true)
+	dep_libtiff  = dependency('libtiff-4', required: true)
 	if (host_machine.system() == 'windows') and (meson.get_compiler('c').get_id() == 'gcc')
 		# Use MinGW prebuilt SDL2 on Windows platform (fix wrap build on GitHub Actions Windows 2019)
 		dep_sdl2 = dependency('sdl2', fallback: ['sdl2-mingw', 'sdl2_dep'])
