--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -10,3 +10,4 @@ webext_adder_srcs = [
 ]
 
 webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs, install: true, install_dir: get_option('libexecdir'))
+subdir('tests')
