Set ARCOLLECT_DEBUG=all in webext-adder and webextension tests

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -8,6 +8,7 @@ online_nsfw_tests = files(
 )
 
 tests_env = environment({
+	'ARCOLLECT_DEBUG': 'all',
 	'ARCOLLECT_WEBEXT_ADDER_PATH': webext_adder_exe.full_path(),
 })
 tests_deps = [
