--- a/webextension/tests/meson.build
+++ b/webextension/tests/meson.build
@@ -4,6 +4,7 @@ common_test_deps = [
 ]
 
 webext_test_env  = environment({
+	'ARCOLLECT_DEBUG': 'all',
 	'ARCOLLECT_WEBEXT_ADDER_PATH': webext_adder_exe.full_path(),
 	'ARCOLLECT_WEBEXT_ZIP_PATH': webextension_target.full_path(),
 	'ARCOLLECT_TEST_DATA_HOME': meson.current_build_dir(),
