--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -38,6 +38,27 @@ if with_xdg
 	install_data('arcollect.desktop', install_dir: get_option('datadir')/'applications')
 endif
 
+if get_option('sdl_threading').auto()
+	sdl_threading_tests = {
+		'std::mutex': 'mutex',
+		'std::thread': 'thread',
+		'std::lock_guard': 'mutex',
+		'std::condition_variable': 'condition_variable',
+	}
+	sdl_threading = false
+	foreach type, header: sdl_threading_tests
+		if not cpp.has_header_symbol(header,type)
+			sdl_threading = true
+		endif
+	endforeach
+else
+	sdl_threading = get_option('sdl_threading').enabled()
+endif
+
+if sdl_threading
+	error('sdl_threading is a work in progress.')
+endif
+
 desktop_app_staticlib = static_library('desktop-app-staticlib', deskapp_srcs, deskapp_additional_srcs, dependencies: deskapp_deps, include_directories: common_incdirs, link_with: common_lib)
 
 desktop_app_dep = declare_dependency(sources: deskapp_additional_srcs, dependencies: deskapp_deps, include_directories: common_incdirs, link_with: desktop_app_staticlib)
