Added MinGW-std-threads (https://github.com/meganz/mingw-std-threads) and fixed MinGW builds
	This provide standard C++11 primitive on MinGW.

	Now the GitHub Windows 2019 instance can build Arcollect, but test fails.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -8,6 +8,9 @@ deskapp_deps = [
 	dep_sqlite3,
 	dep_inih,
 ]
+if with_mingw_std_threads
+	deskapp_deps += subproject('mingw-std-threads').get_variable('std_threaddep')
+endif
 deskapp_srcs = [
 	'config.cpp',
 	'db/account.cpp',
