--- a/subprojects/packagefiles/sdl2_image-mingw/meson.build
+++ b/subprojects/packagefiles/sdl2_image-mingw/meson.build
@@ -4,5 +4,5 @@ archdir = meson.project_source_root() / host_machine.cpu()+'-w64-mingw32'
 
 sdl2_image_dep = declare_dependency(
 	include_directories: include_directories(archdir / 'include/SDL2'),
-	link_args: ['-I'+archdir / 'lib', '-llibSDL2_image.a'],
+	link_args: ['-L'+archdir / 'lib', '-lSDL2_image'],
 )
