--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -9,5 +9,10 @@ webext_adder_srcs = [
 	'main.cpp',
 ]
 
+if (host_machine.system() == 'windows')
+	# Link to Winsock under Windows
+	webext_adder_deps += cpp.find_library('ws2_32')
+endif
+
 webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs, install: true, install_dir: get_option('libexecdir'))
 subdir('tests')
