Moved web-extension *Native Application manifest* in webext-adder and fixed the executable name

--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -15,4 +15,29 @@ if (host_machine.system() == 'windows')
 endif
 
 webext_adder_exe = executable('arcollect-webext-adder', webext_adder_srcs, link_with: common_lib, dependencies: webext_adder_deps, include_directories: common_incdirs, install: true, install_dir: get_option('libexecdir'))
+
+# Application manifest for Firefox
+webext_conf = configuration_data()
+webext_conf.merge_from(config_h)
+webext_conf.set('ARCOLLECT_WEBEXT_ADDER_PATH', get_option('prefix') / get_option('libexecdir') / 'arcollect-webext-adder')
+
+webext_appmanifest_firefox = configure_file(input: 'appmanifest-firefox.json.in', output: 'appmanifest-firefox-install.json', configuration: webext_conf)
+
+webext_conf_inbuild = configuration_data()
+webext_conf_inbuild.merge_from(config_h)
+webext_conf_inbuild.set('ARCOLLECT_WEBEXT_ADDER_PATH',webext_adder_exe.full_path())
+webext_appmanifest_firefox_debug = configure_file(input: 'appmanifest-firefox.json.in', output: 'appmanifest-firefox.json', configuration: webext_conf_inbuild)
+
+if host_machine.system() == 'windows'
+	webext_appmanifest_firefox_installdir = get_option('libdir') / 'arcollect'
+	warning('Native application manifest is a WIP')
+	# TODO Windows support
+elif host_machine.system() == 'darwin'
+	webext_appmanifest_firefox_installdir = '/Library/Application Support/Mozilla/NativeMessagingHosts/'
+else # Assume Linux-like
+	webext_appmanifest_firefox_installdir = get_option('libdir') / 'mozilla/native-messaging-hosts'
+endif
+
+install_data(webext_appmanifest_firefox, rename: 'arcollect_webext_adder.json', install_dir: webext_appmanifest_firefox_installdir)
+
 subdir('tests')
