[packaging] Fixed typo and added zlib in dependencies summary

--- a/packaging/meson.build
+++ b/packaging/meson.build
@@ -51,13 +51,14 @@ if enable_native_progs
 		'sdl2': not dep_sdl2_static,
 		'sdl2_image': not dep_sdl2_image_static,
 		'sdl2_ttf': not dep_sdl2_ttf_static,
-		'SQLite3': not dep_sqlite3_static,
+		'sqlite3': not dep_sqlite3_static,
 		'INIReader': not dep_inih_static,
 		
 		'freetype2': dep_freetype2.type_name() != 'internal',
 		'libjpeg': dep_libjpeg.type_name() != 'internal',
 		'libpng': dep_libpng.type_name() != 'internal',
 		'libtiff-4': dep_libtiff.type_name() != 'internal',
+		'zlib': dep_zlib.type_name() != 'internal',
 	}, section: 'Using system dependency (NO if embeded)', bool_yn: true)
 endif
 
