[GitHub Actions] Updated `--force-fallback-for` in `build-wrapped` job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         uses: BSFishy/meson-build@v1.0.3
         with:
           action: build
-          setup-options: --force-fallback-for sqlite,libcurl,sdl2,sdl2_image,sdl2_ttf
+          setup-options: --force-fallback-for libcurl,sdl2,sdl2_image,sdl2_ttf,sqlite3,INIReader,freetype2,libjpeg,libpng,libtiff-4,zlib
           meson-version: 0.57.1
       - name: Test project
         uses: BSFishy/meson-build@v1.0.3
