--- a/webext-adder/meson.build
+++ b/webext-adder/meson.build
@@ -29,6 +29,13 @@ webext_conf_inbuild.merge_from(config_h)
 webext_conf_inbuild.set('ARCOLLECT_WEBEXT_ADDER_PATH',webext_adder_exe.full_path())
 webext_appmanifest_firefox_debug = configure_file(input: 'appmanifest-firefox.json.in', output: 'appmanifest-firefox.json', configuration: webext_conf_inbuild)
 
+webext_conf_windows = configuration_data()
+webext_conf_windows.merge_from(config_h)
+webext_conf_windows.set('ARCOLLECT_WEBEXT_ADDER_PATH','arcollect-webext-adder.exe')
+
+webext_appmanifest_firefox_windows = configure_file(input: 'appmanifest-firefox.json.in', output: 'appmanifest-firefox-windows.json', configuration: webext_conf_windows)
+webext_appmanifest_firefox_windows_full_path = meson.current_build_dir()/'appmanifest-firefox-windows.json'
+
 if host_machine.system() == 'windows'
 	webext_appmanifest_firefox_installdir = get_option('libdir') / 'arcollect'
 	warning('Native application manifest is a WIP')
